# RISCV-Simulator-Tomasulo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  code  components.hpp  cpu_core.hpp  cpu_stages.cpp  decoder.hpp  include.hpp  main.cpp  myout.txt  tomasulo_components.hpp
src/: cpu_core.hpp  cpu_stages.cpp  include.hpp  main.cpp  tomasulo_components.hpp
testcases/: array_test1.data
